--- a/app/src/main/res/layout/activity_sale_client_sale_details.xml
+++ b/app/src/main/res/layout/activity_sale_client_sale_details.xml
@@ -11,25 +11,20 @@
         android:layout_height="54dp">
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            style="@style/ActionBarIcon"
             android:id="@+id/img_back"
             android:src="@mipmap/btn_back_arrow"
-            android:layout_marginLeft="10dp"
             android:layout_centerVertical="true" />
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            style="@style/ActionBarIcon"
             android:id="@+id/img_plus"
             android:src="@mipmap/plus_thin"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="15dp" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+        <ImageView style="@style/ActionBarIcon"
             android:id="@+id/img_filter"
             android:src="@mipmap/ic_filter_map"
             android:layout_centerVertical="true"
