--- a/app/src/main/res/layout/fragment_view_client.xml
+++ b/app/src/main/res/layout/fragment_view_client.xml
@@ -89,6 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
+                    android:id="@+id/last_visited"
                     android:layout_toRightOf="@+id/icon_symbol"
                     android:text="last visit 10 days ago"
                     android:textColor="@color/white"
@@ -137,6 +138,7 @@
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:scaleType="fitXY"
+                    android:onClick="onClick"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_message" />
 
@@ -153,6 +155,7 @@
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:scaleType="fitXY"
+                    android:onClick="onClick"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/phone" />
 
@@ -199,10 +202,12 @@
 
 
                         <RelativeLayout
+                                android:id="@+id/sales_layout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
                             <LinearLayout
+
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_toLeftOf="@+id/layout_schedule_right"
@@ -212,7 +217,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerVertical="true"
-                                    android:text="Total Sales"
+                                    android:text="Sales"
                                     android:textStyle="bold"
                                     android:textColor="@color/schedule_title_bg_color"
                                     android:textSize="16sp" />
@@ -221,7 +226,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerVertical="true"
-                                    android:text="How much you made from .."
+                                    android:text="Total Sale: $0.00"
                                     android:textColor="@color/schedule_title_bg_color"
                                     android:textSize="11sp" />
 
@@ -285,6 +290,7 @@
 
 
                         <RelativeLayout
+                                android:onClick="onClick"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
@@ -292,6 +298,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
+                                android:id="@+id/schedule_layout"
                                 android:layout_centerVertical="true">
 
                                 <TextView
@@ -340,9 +347,92 @@
 
                     </LinearLayout>
 
+
+
                 </RelativeLayout>
 
                 <RelativeLayout
+                        android:id="@+id/visits"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical">
+
+                    <ImageView
+                            android:id="@+id/ring_invites"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@mipmap/ring_blue"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp" />
+
+                    <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="15dp"
+                            android:layout_toRightOf="@+id/ring_invites"
+                            android:orientation="vertical"
+                            android:gravity="center_vertical">
+
+
+                        <RelativeLayout
+                                android:onClick="onClick"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:id="@+id/invites_layout"
+                                    android:layout_centerVertical="true">
+
+                                <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_centerVertical="true"
+                                        android:text="Visits"
+                                        android:textStyle="bold"
+                                        android:textColor="@color/schedule_title_bg_color"
+                                        android:textSize="16sp" />
+
+
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentRight="true"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginRight="10dp"
+                                    android:orientation="horizontal">
+
+
+                                <ImageView
+                                        android:layout_width="15dp"
+                                        android:layout_height="15dp"
+                                        android:src="@drawable/ic_arrow_gray" />
+
+                            </LinearLayout>
+
+                            <View
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0.1dp"
+                                    android:background="@android:color/darker_gray"
+                                    android:layout_alignParentBottom="true" />
+
+
+                        </RelativeLayout>
+
+                    </LinearLayout>
+
+
+
+                </RelativeLayout>
+
+
+                <!-- <RelativeLayout
                     android:id="@+id/special"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -425,89 +515,89 @@
                         android:layout_alignParentBottom="true"
                         android:layout_marginLeft="50dp" />
 
-                </RelativeLayout>
+                </RelativeLayout> -->
 
-                <RelativeLayout
-                    android:id="@+id/goal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
+                <!--   <RelativeLayout
+                       android:id="@+id/goal"
+                       android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:layout_weight="1">
 
-                    <ImageView
-                        android:id="@+id/ring_goal"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@mipmap/ring_green"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="15dp" />
+                       <ImageView
+                           android:id="@+id/ring_goal"
+                           android:layout_width="20dp"
+                           android:layout_height="20dp"
+                           android:src="@mipmap/ring_green"
+                           android:layout_centerVertical="true"
+                           android:layout_marginLeft="15dp" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="15dp"
-                        android:layout_toRightOf="@+id/ring_goal"
-                        android:orientation="vertical"
-                        android:gravity="center_vertical">
-
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_centerVertical="true"
-                                    android:text="Goals"
-                                    android:textStyle="bold"
-                                    android:textColor="@color/schedule_title_bg_color"
-                                    android:textSize="16sp" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_centerVertical="true"
-                                    android:text="You have 10 upcoming"
-                                    android:textColor="@color/schedule_title_bg_color"
-                                    android:textSize="11sp" />
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginRight="10dp"
-                                android:orientation="horizontal">
+                       <LinearLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:layout_marginLeft="15dp"
+                           android:layout_toRightOf="@+id/ring_goal"
+                           android:orientation="vertical"
+                           android:gravity="center_vertical">
 
 
-                                <ImageView
-                                    android:layout_width="15dp"
-                                    android:layout_height="15dp"
-                                    android:src="@drawable/ic_arrow_gray" />
+                           <RelativeLayout
+                               android:layout_width="match_parent"
+                               android:layout_height="wrap_content">
 
-                            </LinearLayout>
+                               <LinearLayout
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   android:orientation="vertical">
+
+                                   <TextView
+                                       android:layout_width="wrap_content"
+                                       android:layout_height="wrap_content"
+                                       android:layout_centerVertical="true"
+                                       android:text="Goals"
+                                       android:textStyle="bold"
+                                       android:textColor="@color/schedule_title_bg_color"
+                                       android:textSize="16sp" />
+
+                                   <TextView
+                                       android:layout_width="wrap_content"
+                                       android:layout_height="wrap_content"
+                                       android:layout_centerVertical="true"
+                                       android:text="You have 10 upcoming"
+                                       android:textColor="@color/schedule_title_bg_color"
+                                       android:textSize="11sp" />
+
+                               </LinearLayout>
+
+                               <LinearLayout
+                                   android:layout_width="wrap_content"
+                                   android:layout_height="wrap_content"
+                                   android:layout_alignParentRight="true"
+                                   android:layout_centerVertical="true"
+                                   android:layout_marginRight="10dp"
+                                   android:orientation="horizontal">
+
+
+                                   <ImageView
+                                       android:layout_width="15dp"
+                                       android:layout_height="15dp"
+                                       android:src="@drawable/ic_arrow_gray" />
+
+                               </LinearLayout>
 
 
 
-                        </RelativeLayout>
+                           </RelativeLayout>
 
-                    </LinearLayout>
+                       </LinearLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.1dp"
-                        android:background="@android:color/darker_gray"
-                        android:layout_marginLeft="50dp"
-                        android:layout_alignParentBottom="true" />
+                       <View
+                           android:layout_width="match_parent"
+                           android:layout_height="0.1dp"
+                           android:background="@android:color/darker_gray"
+                           android:layout_marginLeft="50dp"
+                           android:layout_alignParentBottom="true" />
 
-                </RelativeLayout>
+                   </RelativeLayout> -->
 
                 <RelativeLayout
                     android:id="@+id/line"
@@ -527,6 +617,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="15dp"
+                        android:onClick="onClick"
+                        android:id="@+id/line_layout"
                         android:layout_toRightOf="@+id/ring_important_info"
                         android:orientation="vertical"
                         android:gravity="center_vertical">
@@ -585,80 +677,7 @@
 
                 </RelativeLayout>
 
-                <RelativeLayout
-                    android:id="@+id/territory"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
 
-                    <ImageView
-                        android:id="@+id/ring_lines_territory"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@mipmap/ring_blue"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="15dp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="15dp"
-                        android:layout_toRightOf="@+id/ring_lines_territory"
-                        android:orientation="vertical"
-                        android:gravity="center_vertical">
-
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_toLeftOf="@+id/layout_lines_territory_right"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_centerVertical="true"
-
-                                    android:text="Sales"
-                                    android:textStyle="bold"
-                                    android:textColor="@color/schedule_title_bg_color"
-                                    android:textSize="16sp" />
-
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:id="@+id/layout_lines_territory_right"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginRight="10dp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:id="@+id/lines_territory_number"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-
-                                    android:text="$0.00"
-                                    android:layout_gravity="center_vertical"
-                                    android:textSize="12sp"
-                                    android:textColor="@color/blue"/>
-
-                            </LinearLayout>
-
-
-
-                        </RelativeLayout>
-
-                    </LinearLayout>
-
-                </RelativeLayout>
             </LinearLayout>
 
             <TextView
