--- a/app/src/main/res/layout/map_marker_info_window.xml
+++ b/app/src/main/res/layout/map_marker_info_window.xml
@@ -3,7 +3,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:padding="20dip"
+              android:paddingTop="20dip"
+              android:paddingLeft="20dip"
+              android:paddingRight="20dip"
+
               android:background="@android:color/transparent"
               android:layout_height="wrap_content">
     <LinearLayout
@@ -30,7 +33,7 @@
                 android:layout_marginRight="10dp"
                 android:src="@drawable/default_avatar" />
         <TextView android:layout_width="wrap_content"
-                  android:text=""
+                  android:text="dsd"
                   android:id="@+id/full_name_tv"
                   android:layout_marginTop="20dp"
                   android:layout_toRightOf="@+id/user_picture_iv"
@@ -40,26 +43,17 @@
                   android:textStyle="bold"
                   android:layout_alignParentTop="true"
                   android:layout_height="wrap_content"/>
+
         <TextView android:layout_width="wrap_content"
-                  android:text="emily@dobson.com"
-                  android:layout_marginRight="20dp"
-                  android:id="@+id/address_tv"
-                  android:textSize="12sp"
-                  android:textColor="@color/grey"
-                  android:layout_toRightOf="@+id/user_picture_iv"
-                  android:layout_below="@+id/full_name_tv"
-                  android:layout_centerHorizontal="true"
-                  android:layout_height="wrap_content"/>
-        <TextView android:layout_width="wrap_content"
-                  android:text=""
+                  android:text="adafd"
                   android:id="@+id/distance"
-                  android:layout_marginTop="30dp"
-                  android:layout_centerHorizontal="true"
+                  android:layout_marginTop="0dp"
                   android:textColor="@color/grey"
                   android:textSize="11sp"
+                  android:layout_toRightOf="@+id/user_picture_iv"
+
+                  android:layout_below="@+id/full_name_tv"
                   android:layout_marginRight="20dp"
-                  android:layout_alignParentRight="true"
-                  android:layout_alignParentTop="true"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
                   android:text=""
@@ -86,6 +80,7 @@
     <TextView android:layout_width="wrap_content"
               android:text="Last Visited: Never"
               android:layout_marginLeft="20dp"
+              android:id="@+id/last_visited"
               android:textColor="@color/grey"
               android:textSize="12sp"
               android:layout_height="wrap_content"/>
@@ -106,6 +101,7 @@
                   android:text="Total Earnings: $0.00"
                   android:layout_marginLeft="20dp"
                   android:textColor="@color/grey"
+                  android:id="@+id/total_earnings"
                   android:textSize="12sp"
                   android:layout_height="wrap_content"/>
 
@@ -115,7 +111,7 @@
                   android:padding="5dip"
                   android:gravity="center"
                   android:orientation="horizontal">
-        <ImageView android:layout_width="wrap_content"
+        <!-- <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_call_blue"/>
@@ -126,9 +122,25 @@
         <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
-                   android:src="@drawable/ic_locate"/>
+                   android:src="@drawable/ic_locate"/> -->
+        <TextView android:layout_width="wrap_content"
+                  android:text="emily@dobson.com"
+                  android:id="@+id/address_tv"
+                  android:textSize="12sp"
+                  android:layout_margin="10dp"
+                  android:textColor="@color/grey"
+                  android:layout_toRightOf="@+id/user_picture_iv"
+                  android:layout_below="@+id/full_name_tv"
+                  android:layout_centerHorizontal="true"
+                  android:textStyle="bold"
+                  android:layout_height="wrap_content"/>
 
 
     </LinearLayout>
     </LinearLayout>
+    <ImageView android:layout_width="20dp"
+               android:layout_gravity="center"
+               android:src="@drawable/inverted_triangle"
+               android:scaleType="fitXY"
+               android:layout_height="10dp"/>
 </LinearLayout>
