--- a/app/src/main/res/layout/fragment_privacy.xml
+++ b/app/src/main/res/layout/fragment_privacy.xml
@@ -99,6 +99,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:visibility="gone"
                 android:layout_toLeftOf="@+id/ivArrow"
                 android:gravity="center_vertical"
                 android:text="@string/privates"
@@ -117,6 +118,7 @@
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:id="@+id/imageView20"
+                android:visibility="gone"
                 android:src="@drawable/password_grey"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/tvSales" />
@@ -126,12 +128,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.1dp"
+            android:visibility="gone"
             android:background="@color/light_gray2"></View>
 
         <RelativeLayout
             android:id="@+id/rlGoals"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="gone"
             android:layout_weight="1">
 
             <TextView
@@ -192,6 +196,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
+                android:visibility="gone"
                 android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/ivDailyActivities"
                 android:gravity="center_vertical"
@@ -238,6 +243,7 @@
             <TextView
                 android:id="@+id/tvClients"
                 android:layout_width="wrap_content"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
@@ -289,6 +295,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:visibility="gone"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/ivTeritorry"
@@ -311,6 +318,7 @@
                 android:id="@+id/imageView22"
                 android:src="@drawable/password_grey"
                 android:layout_centerVertical="true"
+                android:visibility="gone"
                 android:layout_toLeftOf="@+id/tvTeritorry" />
 
         </RelativeLayout>
@@ -348,6 +356,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:visibility="gone"
                 android:layout_toLeftOf="@+id/ivLine"
                 android:gravity="center_vertical"
                 android:text="@string/privates"
@@ -366,6 +375,7 @@
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:id="@+id/imageView23"
+                android:visibility="gone"
                 android:src="@drawable/password_grey"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/tvLine" />
@@ -381,6 +391,7 @@
             android:id="@+id/rlIndustry"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="gone"
             android:layout_weight="1">
 
             <ImageView
@@ -389,6 +400,7 @@
                 android:id="@+id/imageView24"
                 android:src="@drawable/password_grey"
                 android:layout_centerVertical="true"
+                android:visibility="gone"
                 android:layout_toLeftOf="@+id/tvIndustry" />
 
             <TextView
@@ -413,6 +425,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:visibility="gone"
                 android:layout_toLeftOf="@+id/ivIndustry"
                 android:gravity="center_vertical"
                 android:text="@string/privates"
