--- a/app/src/main/res/layout/activity_coworker.xml
+++ b/app/src/main/res/layout/activity_coworker.xml
@@ -9,7 +9,7 @@
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:background="@mipmap/background_gradient">
+        android:background="@drawable/background_gradient">
 
         <TextView
             android:layout_width="wrap_content"
@@ -53,8 +53,8 @@
 
             <ImageView
                 android:onClick="onClick"
-                android:layout_width="@dimen/action_bar_icon_height"
-                android:layout_height="@dimen/action_bar_icon_height"
+                style="@style/ActionBarIcon"
+                android:id="@+id/privacy_button"
                 android:layout_centerVertical="true"
                 android:src="@drawable/setting"
                 android:padding="@dimen/action_bar_icon_padding" />
@@ -75,6 +75,7 @@
 
     <RelativeLayout
         android:id="@+id/search_layout"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/schedule_create_appointment_bg_color"
@@ -140,7 +141,7 @@
                         android:background="@color/light_gray" />
 
                 </LinearLayout>
-
+<RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                 <HorizontalScrollView
                     android:id="@+id/horizontalScrollView"
                     android:layout_width="match_parent"
@@ -155,6 +156,15 @@
                         android:layout_height="wrap_content" />
 
                 </HorizontalScrollView>
+                <TextView
+                        android:layout_below="@+id/top"
+                        android:layout_margin="10dp"
+                        android:visibility="gone"
+                        android:layout_centerInParent="true"
+                        android:text="You have not added any coworker"
+                        android:id="@+id/no_results"
+                        style="@style/NoResultText"/>
+</RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -202,7 +212,13 @@
                         android:background="@color/light_gray" />
 
                 </LinearLayout>
-
+                <TextView
+                        android:layout_below="@+id/top"
+                        android:layout_margin="30dp"
+                        android:visibility="gone"
+                        android:text="You have not been added as a coworker"
+                        android:id="@+id/no_results_2"
+                        style="@style/NoResultText"/>
                 <GridView
                     android:id="@+id/gridView"
                     android:layout_width="wrap_content"
