--- a/app/src/main/res/layout/activity_coworker_schedules.xml
+++ b/app/src/main/res/layout/activity_coworker_schedules.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="@color/white"
+                android:id="@+id/main_layout"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -16,7 +17,7 @@
             android:id="@+id/top_layout"
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:background="@mipmap/background_gradient">
+            android:background="@drawable/background_gradient">
 
             <TextView
                 android:id="@+id/name"
@@ -52,42 +53,154 @@
 
     </LinearLayout>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/title"
-        android:background="@color/white" />
-    <ProgressBar android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/progress_bar"
-        android:indeterminate="true"/>
-    <TextView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/light_gray2"
-        android:layout_gravity="center_vertical"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="30dp"
-        android:id="@+id/empty_schedule"
-        android:padding="10dp"
-        android:textSize="15sp"
+    <HorizontalScrollView
+            android:id="@+id/tab_scroll"
+            android:layout_width="match_parent"
+            android:scrollbars="none"
+            android:layout_height="wrap_content">
 
-        android:text="You have nothing scheduled for this period!"/>
+        <LinearLayout
+                android:id="@+id/tab_bar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/action_bar_height"
+                android:background="#f6f6f6"
+                android:orientation="horizontal"
+                android:gravity="bottom"
+                android:paddingBottom="0dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="ACTIVITY SCHEDULES"
-        android:textSize="15sp"
-        android:textColor="@android:color/black"
-        android:id="@+id/title"
-        android:layout_below="@+id/linearLayout3"
-        android:layout_alignParentEnd="false"
-        android:gravity="center_vertical"
-        android:paddingLeft="15dp"
-        android:background="@color/sub_title_bg" />
-    android:layout_below="@+id/textView5" />
+            <LinearLayout
+                    android:id="@+id/today_tab"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
 
-</RelativeLayout>
+                    android:orientation="vertical">
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:layout_marginBottom="10dp"
+                        android:text="TODAY"
+                        android:textColor="@color/semi_transparent_black"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="@color/button_bg"
+                        android:visibility="visible" />
+            </LinearLayout>
+            <LinearLayout
+                    android:id="@+id/all_tab"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:orientation="vertical">
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:layout_marginBottom="10dp"
+                        android:text="ALL"
+                        android:textColor="@color/semi_transparent_black"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="@color/button_bg"
+                        android:visibility="invisible" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/this_week_tab"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:orientation="vertical">
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:layout_marginBottom="10dp"
+                        android:text="THIS WEEK"
+                        android:textColor="@color/semi_transparent_black"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="@color/button_bg"
+                        android:visibility="invisible" />
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/next_week_tab"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:orientation="vertical">
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:layout_marginBottom="10dp"
+                        android:text="NEXT WEEK"
+                        android:textColor="@color/semi_transparent_black"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="@color/button_bg"
+                        android:visibility="invisible" />
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/this_month"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:orientation="vertical">
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:layout_marginBottom="10dp"
+                        android:text="THIS MONTH"
+                        android:textColor="@color/semi_transparent_black"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="@color/button_bg"
+                        android:visibility="invisible" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
+    <View android:layout_height="0.1dp"
+          android:layout_width="match_parent"
+          android:background="@color/light_gray2" />
+
+    <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            />
+
+</LinearLayout>
