--- a/app/src/main/res/layout/activity_sale_privacy.xml
+++ b/app/src/main/res/layout/activity_sale_privacy.xml
@@ -17,7 +17,7 @@
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:id="@+id/textView5"
+            android:id="@+id/title"
             android:layout_centerInParent="true"
             style="@style/EditTextStyle" />
 
@@ -31,16 +31,24 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/img_close"
+                    android:id="@+id/img_close"
                 android:layout_width="@dimen/action_bar_icon_height"
                 android:layout_height="@dimen/action_bar_icon_height"
+                    android:onClick="onClick"
                 android:layout_centerVertical="true"
                 android:src="@mipmap/btn_back_arrow"
                 android:padding="@dimen/action_bar_icon_padding"
                 android:nestedScrollingEnabled="false" />
 
         </LinearLayout>
+        <ImageView
+            android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                style="@style/ActionBarIcon"
+                android:padding="5dp"
+                android:id="@+id/add_button"
 
+                android:src="@drawable/checkmark" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,16 +68,50 @@
         android:drawableLeft="@drawable/password"
         android:drawablePadding="20dp"
         android:ellipsize="end"
+        android:gravity="center_vertical"
         android:maxLines="2"
         android:padding="15dp"
-        android:text="@string/control_who_sees_your_activities"
+        android:layout_gravity="center_vertical"
+        android:text="Who can view this section?"
         android:textSize="16sp"
         android:textColor="@color/grey" />
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:id="@+id/list"
         android:background="@color/white" />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/action_bar_height"
+            android:layout_gravity="center_vertical"
+            android:padding="5dip"
+            android:id="@+id/add_layout"
+            android:orientation="horizontal"
+            android:background="@color/schedule_create_appointment_bg_color"
+            android:visibility="gone">
 
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="1"
+                  android:layout_height="match_parent"
+                  android:textColor="@color/grey"
+                  android:textSize="14sp"
+                  android:id="@+id/selected_count"
+                  android:text=""
+                  android:gravity="center_vertical"
+                  android:layout_marginLeft="15dp" />
+
+        <TextView
+                android:layout_width="85dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:visibility="gone"
+                android:layout_gravity="center"
+                android:text = "Add"
+
+                android:background="@drawable/button_round"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+    </LinearLayout>
 </LinearLayout>
