--- a/app/src/main/res/layout/activity_send_invite.xml
+++ b/app/src/main/res/layout/activity_send_invite.xml
@@ -9,7 +9,7 @@
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@mipmap/background">
+        android:background="@drawable/background_blue">
 
         <TextView
             android:id="@+id/txt_help_label"
