--- a/app/src/main/res/layout/fragment_help_listview.xml
+++ b/app/src/main/res/layout/fragment_help_listview.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:background="@mipmap/background"
+        android:background="@drawable/background_blue"
         android:id="@+id/top_layout">
 
         <TextView
