--- a/app/src/main/res/layout/fragment_schedule_view.xml
+++ b/app/src/main/res/layout/fragment_schedule_view.xml
@@ -395,14 +395,15 @@
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
-                <Button
+                <ImageView
                     android:id="@+id/call_client"
                     android:layout_width="120dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/curve_blue_background"
                     android:gravity="center_vertical|center_horizontal"
                     android:text="Call Client"
                    android:textSize="12sp"
+                    android:onClick="onClick"
+                    android:src="@drawable/phone"
                     android:textColor="@color/white" />
 
                 <Button
