--- a/app/src/main/res/layout/fragment_view_client.xml
+++ b/app/src/main/res/layout/fragment_view_client.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+              android:id="@+id/main_layout"
     android:orientation="vertical">
 
 
@@ -37,7 +38,7 @@
                 android:onClick="onClick"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="0dp"
-                android:src="@mipmap/btn_back_arrow" />
+                android:src="@drawable/btn_back_arrow" />
 
         <ImageView
             android:id="@+id/img_edit"
@@ -45,7 +46,7 @@
             android:layout_height="@dimen/action_bar_icon_height"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@mipmap/icon_edit"
+            android:src="@drawable/icon_edit"
             android:padding="@dimen/action_bar_icon_padding" />
 
     </RelativeLayout>
@@ -69,7 +70,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="15dp"
-                android:src="@mipmap/default_avatar" />
+                android:src="@drawable/default_avatar" />
 
             <RelativeLayout
                 android:id="@+id/info"
@@ -82,7 +83,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_centerVertical="true"
-                    android:src="@mipmap/info_red" />
+                    android:src="@drawable/info_red" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -122,7 +123,7 @@
                     android:layout_height="30dp"
                     android:scaleType="fitXY"
                     android:layout_gravity="center_vertical"
-                    android:src="@mipmap/icon_add" />
+                    android:src="@drawable/icon_add" />
 
             </LinearLayout>
 
@@ -138,7 +139,6 @@
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:scaleType="fitXY"
-                    android:onClick="onClick"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_message" />
 
@@ -155,7 +155,6 @@
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:scaleType="fitXY"
-                    android:onClick="onClick"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/phone" />
 
@@ -202,11 +201,13 @@
 
 
                         <RelativeLayout
-                                android:id="@+id/sales_layout"
                             android:layout_width="match_parent"
+                            android:id="@+id/sales_layout"
+                            android:onClick="onClick"
                             android:layout_height="wrap_content">
 
                             <LinearLayout
+
 
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -227,6 +228,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_centerVertical="true"
                                     android:text="Total Sale: $0.00"
+                                    android:id="@+id/total_sales"
                                     android:textColor="@color/schedule_title_bg_color"
                                     android:textSize="11sp" />
 
@@ -290,15 +292,16 @@
 
 
                         <RelativeLayout
-                                android:onClick="onClick"
+                                android:id="@+id/schedule_layout"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                               >
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
-                                android:id="@+id/schedule_layout"
+
                                 android:layout_centerVertical="true">
 
                                 <TextView
@@ -311,6 +314,7 @@
                                     android:textSize="16sp" />
 
                                 <TextView
+                                        android:visibility="gone"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerVertical="true"
@@ -350,7 +354,82 @@
 
 
                 </RelativeLayout>
+                <RelativeLayout
+                        android:id="@+id/line"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1">
 
+                    <ImageView
+                            android:id="@+id/ring_important_info"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@mipmap/ring_purple"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp" />
+
+                    <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="15dp"
+                            android:id="@+id/line_layout"
+                            android:layout_toRightOf="@+id/ring_important_info"
+                            android:orientation="vertical"
+                            android:gravity="center_vertical">
+
+
+                        <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_toLeftOf="@+id/layout_important_info_right"
+                                    android:orientation="vertical">
+
+                                <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_centerVertical="true"
+                                        android:text="Lines"
+                                        android:textStyle="bold"
+                                        android:textColor="@color/schedule_title_bg_color"
+                                        android:textSize="16sp" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                    android:id="@+id/layout_important_info_right"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentRight="true"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginRight="10dp"
+                                    android:orientation="horizontal">
+
+
+                                <ImageView
+                                        android:id="@+id/important_info_arrow"
+                                        android:layout_width="15dp"
+                                        android:layout_height="15dp"
+                                        android:src="@drawable/ic_arrow_gray" />
+
+                            </LinearLayout>
+
+                        </RelativeLayout>
+
+                    </LinearLayout>
+
+                    <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.1dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@android:color/darker_gray"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginLeft="50dp" />
+
+                </RelativeLayout>
                 <RelativeLayout
                         android:id="@+id/visits"
                         android:layout_width="match_parent"
@@ -378,13 +457,14 @@
                         <RelativeLayout
                                 android:onClick="onClick"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:id="@+id/visits_layout">
 
                             <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical"
-                                    android:id="@+id/invites_layout"
+
                                     android:layout_centerVertical="true">
 
                                 <TextView
@@ -416,11 +496,6 @@
 
                             </LinearLayout>
 
-                            <View
-                                    android:layout_width="match_parent"
-                                    android:layout_height="0.1dp"
-                                    android:background="@android:color/darker_gray"
-                                    android:layout_alignParentBottom="true" />
 
 
                         </RelativeLayout>
@@ -442,7 +517,7 @@
                         android:id="@+id/ring_special"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@mipmap/ring_orange"
+                        android:src="@drawable/ring_orange"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="15dp" />
 
@@ -527,7 +602,7 @@
                            android:id="@+id/ring_goal"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
-                           android:src="@mipmap/ring_green"
+                           android:src="@drawable/ring_green"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp" />
 
@@ -599,83 +674,7 @@
 
                    </RelativeLayout> -->
 
-                <RelativeLayout
-                    android:id="@+id/line"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
 
-                    <ImageView
-                        android:id="@+id/ring_important_info"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@mipmap/ring_purple"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="15dp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="15dp"
-                        android:onClick="onClick"
-                        android:id="@+id/line_layout"
-                        android:layout_toRightOf="@+id/ring_important_info"
-                        android:orientation="vertical"
-                        android:gravity="center_vertical">
-
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_toLeftOf="@+id/layout_important_info_right"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_centerVertical="true"
-                                    android:text="Lines"
-                                    android:textStyle="bold"
-                                    android:textColor="@color/schedule_title_bg_color"
-                                    android:textSize="16sp" />
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:id="@+id/layout_important_info_right"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginRight="10dp"
-                                android:orientation="horizontal">
-
-
-                                <ImageView
-                                    android:id="@+id/important_info_arrow"
-                                    android:layout_width="15dp"
-                                    android:layout_height="15dp"
-                                    android:src="@drawable/ic_arrow_gray" />
-
-                            </LinearLayout>
-
-                        </RelativeLayout>
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.1dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@android:color/darker_gray"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginLeft="50dp" />
-
-                </RelativeLayout>
 
 
             </LinearLayout>
