--- a/app/src/main/res/layout/schedule_list.xml
+++ b/app/src/main/res/layout/schedule_list.xml
@@ -25,5 +25,5 @@
               android:padding="10dp"
               android:textSize="15sp"
 
-              android:text="You have nothing scheduled for this period!"/>
+              android:text="Nothing scheduled for this period!"/>
 </RelativeLayout>
