--- a/app/src/main/res/layout/activity_co_worker_filter.xml
+++ b/app/src/main/res/layout/activity_co_worker_filter.xml
@@ -91,27 +91,44 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:layout_below="@+id/top_layout"
-        android:layout_above="@+id/bottom_layout"
-        android:background="@color/white">
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/bottom_layout">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DISTANCE FROM ME"
-            android:id="@+id/textView13"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="5,000 miles"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txt_miles"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DISTANCE FROM ME"
+                android:id="@+id/textView13"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp" />
+        </RelativeLayout>
 
         <SeekBar
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/seekBar"
             android:layout_marginTop="10dp"
-            android:max="100"
-            android:progress="50" />
+            android:max="10000"
+            android:progress="2500" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -123,8 +140,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_height="75dp">
 
                 <View
                     android:layout_width="match_parent"
@@ -148,53 +164,29 @@
                     android:gravity="center_vertical">
 
                     <TextView
-                        android:layout_width="fill_parent"
-                        android:layout_height="35dp"
-                        android:text="All"
-                        android:id="@+id/txt_all"
-                        android:layout_weight="1"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:gravity="center_vertical|center_horizontal"
-                        android:background="@drawable/white_fill_grey_stroke"
-                        android:layout_marginLeft="15dp" />
-
-                    <TextView
-                        android:layout_width="fill_parent"
                         android:layout_height="35dp"
                         android:text="Just Me"
                         android:id="@+id/txt_justme"
-                        android:layout_weight="1"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:gravity="center_vertical|center_horizontal"
-                        android:background="@drawable/white_fill_grey_stroke"
-                        android:layout_marginLeft="10dp" />
-
-                    <TextView
-                        android:layout_width="fill_parent"
-                        android:layout_height="35dp"
-                        android:text="Company"
-                        android:id="@+id/txt_company"
-                        android:layout_weight="1"
                         android:textColor="@color/white"
                         android:textSize="14sp"
                         android:gravity="center_vertical|center_horizontal"
                         android:background="@drawable/blue_fill_grey_stroke"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:onClick="onClient"
+                        android:layout_width="100dp" />
 
                     <TextView
-                        android:layout_width="fill_parent"
                         android:layout_height="35dp"
                         android:text="Co-Worker"
                         android:id="@+id/txt_co_worker"
-                        android:layout_weight="1"
                         android:textColor="@color/black"
                         android:gravity="center_vertical|center_horizontal"
                         android:background="@drawable/white_fill_grey_stroke"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="5dp"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:onClick="onClient"
+                        android:layout_width="100dp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -202,8 +194,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_height="75dp">
 
                 <View
                     android:layout_width="match_parent"
@@ -232,11 +223,12 @@
                         android:text="1W"
                         android:id="@+id/txt_1w"
                         android:layout_weight="1"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="14sp"
                         android:gravity="center_vertical|center_horizontal"
-                        android:background="@drawable/white_fill_grey_stroke"
-                        android:layout_marginLeft="15dp" />
+                        android:background="@drawable/blue_fill_grey_stroke"
+                        android:layout_marginLeft="15dp"
+                        android:onClick="onLastVisited"/>
 
                     <TextView
                         android:layout_width="fill_parent"
@@ -248,7 +240,8 @@
                         android:textSize="14sp"
                         android:gravity="center_vertical|center_horizontal"
                         android:background="@drawable/white_fill_grey_stroke"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:onClick="onLastVisited"/>
 
                     <TextView
                         android:layout_width="fill_parent"
@@ -256,11 +249,12 @@
                         android:text="3W"
                         android:id="@+id/txt_3w"
                         android:layout_weight="1"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:textSize="14sp"
                         android:gravity="center_vertical|center_horizontal"
-                        android:background="@drawable/blue_fill_grey_stroke"
-                        android:layout_marginLeft="10dp" />
+                        android:background="@drawable/white_fill_grey_stroke"
+                        android:layout_marginLeft="10dp"
+                        android:onClick="onLastVisited"/>
 
                     <TextView
                         android:layout_width="fill_parent"
@@ -273,12 +267,13 @@
                         android:background="@drawable/white_fill_grey_stroke"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="5dp"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:onClick="onLastVisited"/>
 
                     <TextView
                         android:layout_width="fill_parent"
                         android:layout_height="35dp"
-                        android:text="2M+"
+                        android:text="> +4W"
                         android:id="@+id/txt_2m"
                         android:layout_weight="1"
                         android:textColor="@color/black"
@@ -286,15 +281,15 @@
                         android:background="@drawable/white_fill_grey_stroke"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="5dp"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:onClick="onLastVisited"/>
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_height="120dp">
 
                 <View
                     android:layout_width="match_parent"
@@ -304,7 +299,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="SALES"
+                    android:text="SORT BY"
                     android:id="@+id/textView16"
                     android:layout_marginLeft="15dp"
                     android:textColor="@color/black"
@@ -314,30 +309,66 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical">
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="35dp"
+                        android:text="Distance"
+                        android:id="@+id/txt_distance"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:background="@drawable/blue_fill_grey_stroke"
+                        android:layout_marginLeft="45dp"
+                        android:onClick="onOrderBy" />
+
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="35dp"
+                        android:text="Sales"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:background="@drawable/white_fill_grey_stroke"
+                        android:layout_marginLeft="10dp"
+                        android:onClick="onOrderBy"
+                        android:id="@+id/txt_sale" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="10dp">
 
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="35dp"
                         android:text="Highest"
                         android:id="@+id/txt_highest"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="14sp"
                         android:gravity="center_vertical|center_horizontal"
-                        android:background="@drawable/white_fill_grey_stroke"
-                        android:layout_marginLeft="15dp" />
+                        android:background="@drawable/blue_fill_grey_stroke"
+                        android:layout_marginLeft="45dp"
+                        android:onClick="onOrder"/>
 
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="35dp"
                         android:text="Lowest"
                         android:id="@+id/txt_lowest"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:textSize="14sp"
                         android:gravity="center_vertical|center_horizontal"
-                        android:background="@drawable/blue_fill_grey_stroke"
-                        android:layout_marginLeft="10dp" />
+                        android:background="@drawable/white_fill_grey_stroke"
+                        android:layout_marginLeft="10dp"
+                        android:onClick="onOrder"/>
 
                 </LinearLayout>
             </LinearLayout>
@@ -345,8 +376,8 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_marginTop="7dp"
+                android:layout_height="100dp">
 
                 <View
                     android:layout_width="match_parent"
