--- a/app/src/main/res/layout/activity_co_worker_line.xml
+++ b/app/src/main/res/layout/activity_co_worker_line.xml
@@ -37,7 +37,39 @@
             android:textStyle="bold"
             android:layout_centerInParent="true" />
 
+        <LinearLayout
+            android:id="@+id/add_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_alignParentTop="true"
+                android:padding="@dimen/action_bar_icon_padding"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/action_bar_icon_height"
+                android:text="Done"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
     </RelativeLayout>
+
+    <TextView android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="No territories found"
+        android:layout_margin="30dp"
+        android:background="@drawable/white_fill_grey_stroke"
+        android:padding="20dp"
+        android:textSize="15sp"
+        android:visibility="gone"
+        android:textColor="@color/light_gray"
+        android:id="@+id/no_results"
+        android:layout_height="wrap_content"/>
 
     <ListView
         android:layout_width="wrap_content"
