--- a/app/src/main/res/layout/client_territories_list_item.xml
+++ b/app/src/main/res/layout/client_territories_list_item.xml
@@ -40,7 +40,8 @@
                 android:maxLines="1"
                 android:text="50 Clients"
                 android:textColor="@color/light_gray2"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
