--- a/app/src/main/res/layout/fragment_add_sales.xml
+++ b/app/src/main/res/layout/fragment_add_sales.xml
@@ -207,7 +207,6 @@
             <RelativeLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:onClick="onClick"
                 android:id="@+id/select_date"
                 android:orientation="horizontal">
                 <ImageView
@@ -243,12 +242,11 @@
                         android:textSize="10dp" />
 
                     <TextView
-                        android:id="@+id/txt_date"
+                        android:id="@+id/date"
                         android:layout_width="match_parent"
                         android:textColorHint="@color/light_gray2"
                         android:textColor="@color/grey"
                         android:textSize="13sp"
-                        android:onClick="onClick"
                         android:layout_height="35dp"
                         android:text="July 11, 2016"
                         android:inputType="number"
