--- a/app/src/main/res/layout/map_marker_info_window.xml
+++ b/app/src/main/res/layout/map_marker_info_window.xml
@@ -30,8 +30,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/default_avatar" />
+                android:layout_marginRight="10dp" />
         <TextView android:layout_width="wrap_content"
                   android:text="dsd"
                   android:id="@+id/full_name_tv"
