--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
 
     <color name="off_white">#fafafa</color>
     <color name="background2">#E0E0E0</color>
-    <color name="indigo">#3F51B5</color>
+    <color name="indigo">#3f51b5</color>
     <color name="blue">#3c96ff</color>
     <color name="grey">#32323a</color>
     <color name="light_gray">#dae1e4</color>
