--- a/app/src/main/res/layout/activity_line_client_list.xml
+++ b/app/src/main/res/layout/activity_line_client_list.xml
@@ -19,7 +19,7 @@
             android:gravity="center_vertical|center_horizontal">
 
             <TextView
-                android:id="@+id/txt_signup_label"
+                android:id="@+id/txt_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
