--- a/app/src/main/res/layout/fragment_create_client.xml
+++ b/app/src/main/res/layout/fragment_create_client.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/action_bar_height">
             <TextView
+                android:id="@+id/txt_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -225,8 +226,33 @@
 
             </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/territory_layout"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="50dp">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="TERRITORY"
+                    android:id="@+id/textView17"
+                    android:gravity="center_vertical"
+                    style="@style/FieldLabels"/>
 
+                <ImageView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/right_arrow"
+                    android:layout_alignParentBottom="false"
+                    android:layout_marginRight="5dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+            </RelativeLayout>
+
+            <View android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/light_gray"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
