--- a/app/src/main/res/layout/fragment_lines.xml
+++ b/app/src/main/res/layout/fragment_lines.xml
@@ -62,8 +62,8 @@
               android:id="@+id/no_results"
               android:layout_height="wrap_content"/>
     <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/lines_listview"
             android:background="@color/white" />
 </LinearLayout>
